Fix play button jumping around when clicked.

--- a/css/style.css
+++ b/css/style.css
@@ -202,7 +202,7 @@ header a {
 }
 
 #playtoggle:active {
-    top: 10px;
+    top: 25px;
 }
 
 #timeleft {
